not-neg/not-neg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-neg-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: not-neg-deployment
  template:
    metadata:
      labels:
        app: not-neg-deployment
    spec:
      containers:
      - name: not-neg-deployment
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
