not-neg/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: not-neg-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: not-neg-svc
          servicePort: 80
